# accessibility-rewriter

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml
alembic/: env.py
attached_assets/: UC1_Database_Design_Summary.md  UC1_Gherkin_Feature.md  UC1_Service_Control_Design_Summary.md  UC1_Structured_Requirement.md  UC1_UI_Design_Summary.md  UC2_Database_Design_Summary.md  UC2_Gherkin_Feature.md  UC2_Service_Control_Design_Summary.md  UC2_Structured_Requirement.md  UC2_UI_Design_Summary.md  UC3_Database_Design_Summary.md  UC3_Gherkin_Feature.md  UC3_Integrated_Design.md  UC3_MeasureReadingLevel_Analysis.md  UC3_Service_Control_Design_Summary.md  UC3_Structured_Requirement.md  UC3_UI_Design_Summary.md  UC4_CheckDocumentAccessibility_Analysis.md  UC4_Gherkin_Feature.md  UC4_Integrated_Design.md  UC4_Structured_Requirement.md
demo_guide/: UC1_Demo_Guide.md  UC2_Demo_Guide.md  (+1 more)
server/: config.py  database.py  main.py  pyproject.toml  requirements.txt
server/adapters/: __init__.py  anthropic_style_rewriter.py  anthropic_vision_analyzer.py  fake_style_rewriter.py  fake_vision_analyzer.py  style_rewriter_port.py  vision_analyzer_port.py
server/api/: __init__.py
server/api/routes/: __init__.py  analyze.py  documents.py  images.py  rewrite.py
server/middleware/: __init__.py
server/models/: __init__.py  document.py  image.py
server/repositories/: __init__.py  document_repository.py
server/schemas/: __init__.py  analyze.py  document.py  image.py  rewrite.py
server/services/: __init__.py  alttext_service.py  exceptions.py  rewrite_service.py
(+38 files in other folders)
