[project]
name = "accessibility-rewriter-server"
version = "0.1.0"
description = "FastAPI backend for the Accessibility & Tone Rewriter application"
requires-python = ">=3.12"
readme = "README.md"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["../tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
